# BIRA

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: UART.py  algorithm.py  consts.py  detector.py  history.py  label.py  main.py  record.py  speech_to_text.py  tempfile.py  text_viewer.py  uart.py  utils.py
src/cv_viewer/: labels.py  tracking_viewer.py  utils.py
src/outputs/: retrieve_data.py
wheels/: pyzed-4.1-cp310-cp310-linux_aarch64.whl  torchaudio-2.3.0+952ea74-cp310-cp310-linux_aarch64.whl
