[tool.poetry]
name = "bras-voiceandvision"
version = "0.1.0"
description = ""
authors = ["HEKA <heka.polymtl@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "1.23.5"
openai-whisper = "20231117"
opencv-python = "4.10.0.84"
PyAudio = "0.2.14"
pyzed = { path = "./wheels/pyzed-4.1-cp310-cp310-linux_aarch64.whl" }
scipy = "1.8.0"
torch = { url = "https://nvidia.box.com/shared/static/mp164asf3sceb570wvjsrezk1p4ftj8t.whl" }
torchvision = { url = "https://nvidia.box.com/shared/static/xpr06qe6ql3l6rj22cu3c45tz1wzi36p.whl" }
ultralytics = "8.2.82"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
